feat(chat) : Implement chat send and recive functionality

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3.9"
+
 services:
   web:
     image: my-next-app
@@ -5,7 +7,19 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "3000:3000"
+      - "3001:3000"
     environment:
       NODE_ENV: production
     restart: unless-stopped
+    depends_on:
+      - synapse
+
+  synapse:
+    image: matrixdotorg/synapse:latest
+    container_name: synapse
+    restart: unless-stopped
+    ports:
+      - "8008:8008"        # Synapse client API
+      # - "8448:8448"      # OPTIONAL: federation port
+    volumes:
+      - ./synapse:/data    # homeserver.yaml + keys
