--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.513.0",
     "match-sorter": "^8.0.2",
+    "matrix-js-sdk": "^37.5.0",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.8.16",
