feat: Implement notification bar

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,12 @@ version: "3.9"
 
 services:
   web:
-    image: my-next-app
+    image: Homino
     build:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "3001:3000"
+      - "3002:3002"
     environment:
       NODE_ENV: production
     restart: unless-stopped
